# g

./: .gitignore  .pre-commit-config.yaml  AGENTIC_COMPANY_REALITY_CHECK.md  AGENT_TEAM.md  AGENT_WORKFLOW.md  APP_SUMMARY.md  CLAUDE.md  CRITIC_DATA.md  CRITIC_DRILL.md  CRITIC_EDGE.md  CRITIC_FEAT.md  CRITIC_FEEL.md  CRITIC_INT.md  CRITIC_MOB.md  CRITIC_PLAN.md  CRITIC_RBAC.md  CRITIC_SPACE.md  CRITIC_TYPO.md  CRITIC_UNITY.md  ENHANCE_CHECKLIST.md  ENHANCE_FINAL.md  ENHANCE_PROTOTYPE_PROMPT.md  EXECUTION_CHECKLIST.md  FOUNDER_CHECKLIST.md  MASTER_PLAN.md  Makefile  OPUS_CRITICS.md  OPUS_CRITICS_V2.md  PHASE1BIS_PROMPT.md  PHASE1_PROMPT.md  PHASE2_PROMPT.md  PROMPT.md  README.md  ROADMAP.md  SELLABILITY_PLAN.md  THE_PLAN.md  USER_REPORTED_ISSUES.md  UX_FEELING_FINAL.md  opus_plan_v2.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile.dev  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/ai/: client.py  registry.py
backend/app/ai/evals/: harness.py
backend/app/ai/evals/compute_budget_burn/: examples.jsonl
backend/app/ai/evals/compute_capacity/: examples.jsonl
backend/app/ai/evals/compute_contribution/: examples.jsonl
backend/app/ai/evals/explain_invoice_draft/: examples.jsonl
backend/app/billing/: provider.py
backend/app/core/: audit.py  config.py  crypto.py  database.py  errors.py  feature_registry.py  idempotency.py  logging.py  rate_limit.py  rbac.py  security.py  tenancy.py  tenant_ctx.py
backend/app/email/: sender.py
backend/app/events/: bus.py
backend/app/features/admin/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/app/features/approvals/: __init__.py  ai_tools.py  routes.py  schemas.py  service.py  tasks.py
backend/app/features/auth/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/app/features/clients/: __init__.py  ai_tools.py  models.py  routes.py  schemas.py  service.py
backend/app/features/core/: __init__.py  ai_tools.py
backend/app/features/dashboard/: __init__.py  routes.py  schemas.py  service.py  tasks.py
backend/app/features/employees/: __init__.py  ai_tools.py  models.py  routes.py  schemas.py  service.py
backend/app/features/expenses/: __init__.py  ai_tools.py  models.py  routes.py  schemas.py  service.py
backend/app/features/imports/: __init__.py  ai_tools.py  routes.py  schemas.py  service.py  validators.py
backend/app/features/invoices/: __init__.py  ai_tools.py  models.py  routes.py  schemas.py  service.py  tasks.py
backend/app/features/leaves/: __init__.py  ai_tools.py  models.py  routes.py  schemas.py  service.py
backend/app/features/projects/: __init__.py  ai_tools.py  models.py  routes.py  schemas.py  service.py
backend/app/features/search/: __init__.py  routes.py  schemas.py  service.py
backend/app/features/timesheets/: __init__.py  ai_tools.py  models.py  routes.py  schemas.py  service.py
backend/app/monitoring/: telemetry.py
backend/app/notifications/: provider.py
backend/app/ocr/: vision.py
backend/app/pdf/: renderer.py
backend/app/storage/: blob.py
backend/app/tasks/: celery_app.py  retention.py  schedules.py
backend/app/tax/: calculator.py
backend/app/tax/rules/: fr.py  uk.py
backend/fixtures/demo/: clients.csv  employees.csv  projects.csv  teams.csv
backend/migrations/: env.py  runner.py  script.py.mako
backend/migrations/versions/: 20260415_1900_initial_public_schema.py  20260415_1905_seed_country_holidays_fr_uk.py  20260416_0900_auth_tables.py  20260416_0910_seed_dev_tenant_and_admin.py  20260416_1000_phase4_core_data.py  20260418_1000_leave_tables.py  20260418_1100_timesheet_tables.py  20260418_1200_expense_tables.py  20260418_1300_invoice_tables.py  20260418_1400_idempotency_keys.py  20260418_1500_confidential_tier.py  20260418_1600_alembic_runs.py  20260418_1700_teams_table.py
backend/scripts/: generate_demo_seed.py  seed_demo_tenant.py
backend/tests/: conftest.py  test_admin_routes.py  test_ai_pii_boundary.py  test_ai_tool_registry.py  test_auth_service.py  test_celery_schedules.py  test_config.py  test_contract_openapi.py  test_crypto_stub.py  test_dev_admin_seed.py  test_events_bus.py  test_feature_registry.py  test_health.py  test_idempotency.py  test_imports.py  test_migration_runner.py  test_mutation_decorators.py  test_ollama_client.py  test_property_invoice_math.py  test_property_tenant_isolation.py  test_search_routes.py  test_security.py  test_seed_counts.py  test_tenancy.py  test_tenancy_middleware.py  test_wrappers.py
infra/ops/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
infra/ops/gamma_ops/: __init__.py  cli.py  config.py  errors.py  logging.py
infra/ops/gamma_ops/cloudflare/: __init__.py  access.py  dns.py  waf.py
infra/ops/gamma_ops/db/: __init__.py  backup.py  fingerprint.py
infra/ops/gamma_ops/gcp/: __init__.py  cloudrun.py  cloudsql.py  iam.py  kms.py  monitoring.py  projects.py  pubsub.py  scheduler.py  secrets.py  storage.py
infra/ops/gamma_ops/tenants/: __init__.py  delete.py  drift.py  migrate.py  provision.py
infra/ops/gamma_ops/testing/: __init__.py  flawless_gate.py  seed.py
infra/ops/tests/: conftest.py  test_cli.py  test_gcp_storage.py
(+355 files in other folders)
